調整 ApplicationDbContext 用法，解決循環注入的參考問題

--- a/WebCore5MVCApp1/Views/Shared/_Layout.cshtml
+++ b/WebCore5MVCApp1/Views/Shared/_Layout.cshtml
@@ -24,9 +24,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CRMList">CRM 客戶清單</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddCustomer">新增一筆客戶資料</a>
                         </li>
                     </ul>
                 </div>
